update test (2)